# pkg/healthcheck/model.go
@@ -1,4 +1,4 @@
-package models
+package healthcheck
 
 type Healthcheck struct {
 	Status string            `json:"status"`
