# pkg/network/handler.go
@@ -1,16 +1,14 @@
-package handlers
+package network
 
 import (
 	"errors"
 	"net/http"
 
-	"github.com/eiladin/go-simple-startpage/pkg/models"
-	"github.com/eiladin/go-simple-startpage/pkg/usecases/network"
 	"github.com/labstack/echo/v4"
 )
 
-type NetworkHandler struct {
-	NetworkUseCase network.INetwork
+type Handler struct {
+	UseCase INetwork
 }
 
 // Create godoc
@@ -19,13 +17,13 @@ type NetworkHandler struct {
 // @Tags Network
 // @Accept  json
 // @Produce  json
-// @Param network body models.Network true "Add Network"
-// @Success 201 {object} models.NetworkID
+// @Param network body Network true "Add Network"
+// @Success 201 {object} NetworkID
 // @Failure 400 {object} httperror.HTTPError
 // @Failure 500 {object} httperror.HTTPError
 // @Router /api/network [post]
-func (c *NetworkHandler) Create(ctx echo.Context) error {
-	net := new(models.Network)
+func (c *Handler) Create(ctx echo.Context) error {
+	net := new(Network)
 
 	if err := ctx.Bind(net); err != nil || (net.Network == "" && net.Links == nil && net.Sites == nil) {
 		if err == nil {
@@ -34,11 +32,11 @@ func (c *NetworkHandler) Create(ctx echo.Context) error {
 		return echo.ErrBadRequest.SetInternal(err)
 	}
 
-	if err := c.NetworkUseCase.Create(net); err != nil {
+	if err := c.UseCase.Create(net); err != nil {
 		return echo.ErrInternalServerError.SetInternal(err)
 	}
 
-	return ctx.JSON(http.StatusCreated, models.NetworkID{ID: net.ID})
+	return ctx.JSON(http.StatusCreated, NetworkID{ID: net.ID})
 }
 
 // Get godoc
@@ -47,15 +45,15 @@ func (c *NetworkHandler) Create(ctx echo.Context) error {
 // @Tags Network
 // @Accept  json
 // @Produce  json
-// @Success 200 {object} models.Network
+// @Success 200 {object} Network
 // @Failure 404 {object} httperror.HTTPError
 // @Failure 503 {object} httperror.HTTPError
 // @Router /api/network [get]
-func (c *NetworkHandler) Get(ctx echo.Context) error {
-	net, err := c.NetworkUseCase.Get()
+func (c *Handler) Get(ctx echo.Context) error {
+	net, err := c.UseCase.Get()
 
 	if err != nil {
-		if errors.Is(err, network.ErrNotFound) {
+		if errors.Is(err, ErrNotFound) {
 			return echo.ErrNotFound
 		}
 		return echo.ErrInternalServerError.SetInternal(err)
